--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,9 +14,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.effective.android:anchors:1.0.4'
+//    implementation 'com.effective.android:anchors:1.0.4'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-//    implementation project(':anchors')
+    implementation project(':anchors')
 }
