--- a/anchor-annotation/build.gradle
+++ b/anchor-annotation/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'java'
-apply plugin: 'com.novoda.bintray-release'
+//apply plugin: 'com.novoda.bintray-release'
 
 group='com.galaxybruce.android'
 version='1.0.0'
@@ -9,11 +9,11 @@ compileJava {
     targetCompatibility = '1.8'
 }
 
-publish {
-    userOrg = 'galaxybruce'
-    groupId = group
-    artifactId = 'anchor-annotation'
-    publishVersion = version
-    desc = 'Android startup framework'
-    website = 'https://github.com/galaxybruce/Anchors'
-}
+//publish {
+//    userOrg = 'galaxybruce'
+//    groupId = group
+//    artifactId = 'anchor-annotation'
+//    publishVersion = version
+//    desc = 'Android startup framework'
+//    website = 'https://github.com/galaxybruce/Anchors'
+//}
