--- a/anchor-compiler/build.gradle
+++ b/anchor-compiler/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'java'
-apply plugin: 'com.novoda.bintray-release'
+//apply plugin: 'com.novoda.bintray-release'
 
 group='com.galaxybruce.android'
 version='1.0.0'
@@ -11,11 +11,11 @@ dependencies {
     implementation project(':anchor-annotation')
 }
 
-publish {
-    userOrg = 'galaxybruce'
-    groupId = group
-    artifactId = 'anchor-compiler'
-    publishVersion = version
-    desc = 'Android startup framework'
-    website = 'https://github.com/galaxybruce/Anchors'
-}
+//publish {
+//    userOrg = 'galaxybruce'
+//    groupId = group
+//    artifactId = 'anchor-compiler'
+//    publishVersion = version
+//    desc = 'Android startup framework'
+//    website = 'https://github.com/galaxybruce/Anchors'
+//}
